examples/controller-dc2.yaml
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: openshift-lb-controller
spec:
  strategy:
    type: Rolling
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - openshift-lb-controller
      from:
        kind: ImageStreamTag
        name: "openshift-lb-controller:latest"
      lastTriggeredImage: ''
  - type: ConfigChange
  replicas: 1
  selector:
    name: openshift-lb-controller
  template:
    metadata:
      labels:
        name: openshift-lb-controller
    spec:
      serviceAccountName: openshift-lb-controller
      containers:
      - name: openshift-lb-controller
        image: " "
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        terminationMessagePath: "/dev/termination-log"
        imagePullPolicy: IfNotPresent
        capabilities: {}
